# cppm_dip

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  air_vehicle.cpp  air_vehicle.h  broom.cpp  broom.h  camel.cpp  camel.h  eagle.cpp  eagle.h  ground_vehicle.cpp  ground_vehicle.h  kentavr.cpp  kentavr.h  offroad_shoes.cpp  offroad_shoes.h  race.cpp  race.h  super_camel.cpp  super_camel.h  teppich_jet.cpp  teppich_jet.h  vehicle.cpp  vehicle.h
